--- a/css/styles.css
+++ b/css/styles.css
@@ -2097,11 +2097,12 @@ h6 {
   transition-duration: 0.5s;
 }
 
-/*.focus-within\:border-blue-700:focus-within {
+.focus-within\:border-blue-700:focus-within {
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
-.focus-within\:bg-blue-700:focus-within {
+
+/*.focus-within\:bg-blue-700:focus-within {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
