--- a/css/styles.css
+++ b/css/styles.css
@@ -2117,11 +2117,12 @@ h6 {
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
 
-/*.hover\:border-sky-500:hover {
+.hover\:border-sky-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(14 165 233 / var(--tw-border-opacity));
 }
-.hover\:bg-blue-100:hover {
+
+/*.hover\:bg-blue-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
