--- a/css/styles.css
+++ b/css/styles.css
@@ -2147,11 +2147,12 @@ h6 {
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
-/*.hover\:bg-gray-800:hover {
+.hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.hover\:bg-green-400:hover {
+
+/*.hover\:bg-green-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
