--- a/css/styles.css
+++ b/css/styles.css
@@ -2157,11 +2157,12 @@ h6 {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
-/*.hover\:bg-green-500:hover {
+.hover\:bg-green-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
-.hover\:bg-indigo-500:hover {
+
+/*.hover\:bg-indigo-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
