--- a/css/styles.css
+++ b/css/styles.css
@@ -2162,11 +2162,12 @@ h6 {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-/*.hover\:bg-indigo-500:hover {
+.hover\:bg-indigo-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
-.hover\:bg-transparent:hover {
+
+/*.hover\:bg-transparent:hover {
   background-color: transparent;
 }
 .hover\:bg-white:hover {
