--- a/css/styles.css
+++ b/css/styles.css
@@ -2167,10 +2167,11 @@ h6 {
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
 
-/*.hover\:bg-transparent:hover {
+.hover\:bg-transparent:hover {
   background-color: transparent;
 }
-.hover\:bg-white:hover {
+
+/*.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
