--- a/css/styles.css
+++ b/css/styles.css
@@ -2176,10 +2176,11 @@ h6 {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-/*.hover\:bg-gradient-to-r:hover {
+.hover\:bg-gradient-to-r:hover {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.hover\:from-gray-50:hover {
+
+/*.hover\:from-gray-50:hover {
   --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
