--- a/css/styles.css
+++ b/css/styles.css
@@ -2180,12 +2180,13 @@ h6 {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-/*.hover\:from-gray-50:hover {
+.hover\:from-gray-50:hover {
   --tw-gradient-from: #f9fafb var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(249 250 251 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.hover\:from-green-500:hover {
+
+/*.hover\:from-green-500:hover {
   --tw-gradient-from: #22c55e var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(34 197 94 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
