--- a/css/styles.css
+++ b/css/styles.css
@@ -2214,10 +2214,11 @@ h6 {
   padding-left: 2.5rem;
 }
 
-/*.hover\:pr-6:hover {
+.hover\:pr-6:hover {
   padding-right: 1.5rem;
 }
-.hover\:text-black:hover {
+
+/*.hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
