--- a/css/styles.css
+++ b/css/styles.css
@@ -2238,11 +2238,12 @@ h6 {
   color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
-/*.hover\:text-white:hover {
+.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.hover\:ring-1:hover {
+
+/*.hover\:ring-1:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
     var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
