--- a/css/styles.css
+++ b/css/styles.css
@@ -2294,10 +2294,11 @@ h6 {
   transition-delay: 0.4s;
 }
 
-/*.focus\:no-underline:focus {
+.focus\:no-underline:focus {
   text-decoration-line: none;
 }
-.focus\:shadow-none:focus {
+
+/*.focus\:shadow-none:focus {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
