--- a/css/styles.css
+++ b/css/styles.css
@@ -2298,13 +2298,14 @@ h6 {
   text-decoration-line: none;
 }
 
-/*.focus\:shadow-none:focus {
+.focus\:shadow-none:focus {
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.focus\:outline-none:focus {
+
+/*.focus\:outline-none:focus {
   outline: transparent solid 2px;
   outline-offset: 2px;
 }
