--- a/css/styles.css
+++ b/css/styles.css
@@ -2322,11 +2322,12 @@ h6 {
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
-/*.focus\:ring-indigo-600:focus {
+.focus\:ring-indigo-600:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(79 70 229 / var(--tw-ring-opacity));
 }
-.focus\:ring-offset-2:focus {
+
+/*.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
 }
 .active\:border-purple-600:active {
