--- a/css/styles.css
+++ b/css/styles.css
@@ -2351,10 +2351,11 @@ h6 {
   top: 0;
 }
 
-/*.group:hover .group-hover\:-mr-4 {
+.group:hover .group-hover\:-mr-4 {
   margin-right: -1rem;
 }
-.group:hover .group-hover\:-mt-4 {
+
+/*.group:hover .group-hover\:-mt-4 {
   margin-top: -1rem;
 }
 .group:hover .group-hover\:mb-0 {
