--- a/css/styles.css
+++ b/css/styles.css
@@ -2355,10 +2355,11 @@ h6 {
   margin-right: -1rem;
 }
 
-/*.group:hover .group-hover\:-mt-4 {
+.group:hover .group-hover\:-mt-4 {
   margin-top: -1rem;
 }
-.group:hover .group-hover\:mb-0 {
+
+/*.group:hover .group-hover\:mb-0 {
   margin-bottom: 0;
 }
 .group:hover .group-hover\:mb-12 {
