--- a/css/styles.css
+++ b/css/styles.css
@@ -2371,10 +2371,11 @@ h6 {
   margin-bottom: 8rem;
 }
 
-/*.group:hover .group-hover\:ml-0 {
+.group:hover .group-hover\:ml-0 {
   margin-left: 0;
 }
-.group:hover .group-hover\:mr-0 {
+
+/*.group:hover .group-hover\:mr-0 {
   margin-right: 0;
 }
 .group:hover .group-hover\:mt-0 {
