--- a/css/styles.css
+++ b/css/styles.css
@@ -2375,10 +2375,11 @@ h6 {
   margin-left: 0;
 }
 
-/*.group:hover .group-hover\:mr-0 {
+.group:hover .group-hover\:mr-0 {
   margin-right: 0;
 }
-.group:hover .group-hover\:mt-0 {
+
+/*.group:hover .group-hover\:mt-0 {
   margin-top: 0;
 }
 .group:hover .group-hover\:h-32 {
