--- a/css/styles.css
+++ b/css/styles.css
@@ -2379,10 +2379,11 @@ h6 {
   margin-right: 0;
 }
 
-/*.group:hover .group-hover\:mt-0 {
+.group:hover .group-hover\:mt-0 {
   margin-top: 0;
 }
-.group:hover .group-hover\:h-32 {
+
+/*.group:hover .group-hover\:h-32 {
   height: 8rem;
 }
 .group:hover .group-hover\:h-56 {
