--- a/css/styles.css
+++ b/css/styles.css
@@ -2391,10 +2391,11 @@ h6 {
   height: 14rem;
 }
 
-/*.group:hover .group-hover\:h-64 {
+.group:hover .group-hover\:h-64 {
   height: 16rem;
 }
-.group:hover .group-hover\:h-full {
+
+/*.group:hover .group-hover\:h-full {
   height: 100%;
 }
 .group:hover .group-hover\:w-32 {
