--- a/css/styles.css
+++ b/css/styles.css
@@ -2481,10 +2481,11 @@ h6 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-/*.group:hover .group-hover\:border-\[25px\] {
+.group:hover .group-hover\:border-\[25px\] {
   border-width: 25px;
 }
-.group:hover .group-hover\:bg-black {
+
+/*.group:hover .group-hover\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
