--- a/css/styles.css
+++ b/css/styles.css
@@ -2485,11 +2485,12 @@ h6 {
   border-width: 25px;
 }
 
-/*.group:hover .group-hover\:bg-black {
+.group:hover .group-hover\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
-.group:hover .group-hover\:bg-purple-500 {
+
+/*.group:hover .group-hover\:bg-purple-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(168 85 247 / var(--tw-bg-opacity));
 }
