--- a/css/styles.css
+++ b/css/styles.css
@@ -2509,12 +2509,13 @@ h6 {
   --tw-bg-opacity: 0;
 }
 
-/*.group:hover .group-hover\:from-\[\#ff00c6\] {
+.group:hover .group-hover\:from-\[\#ff00c6\] {
   --tw-gradient-from: #ff00c6 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 0 198 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.group:hover .group-hover\:via-\[\#ff5478\] {
+
+/*.group:hover .group-hover\:via-\[\#ff5478\] {
   --tw-gradient-to: rgb(255 84 120 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
