--- a/css/styles.css
+++ b/css/styles.css
@@ -2515,12 +2515,13 @@ h6 {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-/*.group:hover .group-hover\:via-\[\#ff5478\] {
+.group:hover .group-hover\:via-\[\#ff5478\] {
   --tw-gradient-to: rgb(255 84 120 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from),
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.group:hover .group-hover\:to-\[\#ff8a05\] {
+
+/*.group:hover .group-hover\:to-\[\#ff8a05\] {
   --tw-gradient-to: #ff8a05 var(--tw-gradient-to-position);
 }
 .group:hover .group-hover\:text-blue-600 {
