--- a/css/styles.css
+++ b/css/styles.css
@@ -2521,10 +2521,11 @@ h6 {
     #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-/*.group:hover .group-hover\:to-\[\#ff8a05\] {
+.group:hover .group-hover\:to-\[\#ff8a05\] {
   --tw-gradient-to: #ff8a05 var(--tw-gradient-to-position);
 }
-.group:hover .group-hover\:text-blue-600 {
+
+/*.group:hover .group-hover\:text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
