--- a/css/styles.css
+++ b/css/styles.css
@@ -2525,11 +2525,12 @@ h6 {
   --tw-gradient-to: #ff8a05 var(--tw-gradient-to-position);
 }
 
-/*.group:hover .group-hover\:text-blue-600 {
+.group:hover .group-hover\:text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
-.group:hover .group-hover\:text-gray-200 {
+
+/*.group:hover .group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
