--- a/css/styles.css
+++ b/css/styles.css
@@ -2530,11 +2530,12 @@ h6 {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
-/*.group:hover .group-hover\:text-gray-200 {
+.group:hover .group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
-.group:hover .group-hover\:text-white {
+
+/*.group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
