--- a/css/styles.css
+++ b/css/styles.css
@@ -2535,11 +2535,12 @@ h6 {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
-/*.group:hover .group-hover\:text-white {
+.group:hover .group-hover\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.group:hover .group-hover\:opacity-100 {
+
+/*.group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
 .group:hover .group-hover\:blur-sm {
