--- a/css/styles.css
+++ b/css/styles.css
@@ -2540,16 +2540,16 @@ h6 {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-/*.group:hover .group-hover\:opacity-100 {
+.group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
+
 .group:hover .group-hover\:blur-sm {
   --tw-blur: blur(4px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast)
-    var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate)
-    var(--tw-sepia) var(--tw-drop-shadow);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-.group:active .group-active\:bg-transparent {
+
+/*.group:active .group-active\:bg-transparent {
   background-color: transparent;
 }
 .group:active .group-active\:opacity-0 {
