--- a/css/styles.css
+++ b/css/styles.css
@@ -2549,10 +2549,11 @@ h6 {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-/*.group:active .group-active\:bg-transparent {
+.group:active .group-active\:bg-transparent {
   background-color: transparent;
 }
-.group:active .group-active\:opacity-0 {
+
+/*.group:active .group-active\:opacity-0 {
   opacity: 0;
 }
 @media (min-width: 640px) {
